Refactor color commands and update player data handling
This commit refactors color command functionalities to streamline the implementation while improving efficiency. Optimizations have been added to the player data update function for better performance. Non-essential scoreboard-related code files have been purged as part of the cleaning process. Also, the Spigot API is now directly referenced in the pom.xml file.