@@ -2,7 +2,6 @@ package dev.buchstabet.prefixes.team;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.bukkit.entity.Player;
@@ -17,8 +16,9 @@ public class TeamHolder
 
   public Team loadTeam(Player player)
   {
-    List<Team> teams = this.teams.stream().filter(team -> team.getPermission() == null || player.hasPermission(team.getPermission()))
-        .collect(Collectors.toList());
+    List<Team> teams = this.teams.stream()
+        .filter(team -> team.getPermission() == null || player.hasPermission(team.getPermission()))
+        .toList();
 
     Team selected = null;
     for (Team team : teams) {
